--- a/src/SwashbucklerDiary.Rcl/Components/FloatButton/MyFloatButton.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/FloatButton/MyFloatButton.razor
@@ -1,11 +1,15 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 
 <MButton @ref="mButton"
+         @attributes="@Attributes"
          Class="@InternalClass"
+         Elevation="@Elevation"
+         Width="Size"
+         Height="Size"
          Show="Show"
-         Fab="true"
+         Plain
+         Fab
          Large="Desktop"
-         Color="@Color"
          OnClick="OnClick">
     <MIcon>
         @Icon
