--- a/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
@@ -55,6 +55,7 @@
 </HighlightSearchTextField>
 
 <ScrollContainer Id="@scrollContainerId"
+                 ContentClass="pb-5"
                  ContentStyle="padding-top:0px;">
     <div id="screenshot" class="primary-background">
         <div class="d-flex align-center px-3">
@@ -71,30 +72,6 @@
             <span class="text-subtitle-2">
                 @(CounterValue())
             </span>
-        </div>
-
-        <div>
-            @if (ShowWeather)
-            {
-                <DiaryInfoButton Icon="@WeatherIcon"
-                                 Text="@WeatherText">
-                </DiaryInfoButton>
-            }
-
-            @if (ShowMood)
-            {
-                <DiaryInfoButton Icon="@MoodIcon"
-                                 Text="@MoodText">
-                </DiaryInfoButton>
-            }
-
-            @if (ShowLocation)
-            {
-                <DiaryInfoButton Icon="mdi-map-marker-outline"
-                                 Text="@LocationText">
-                </DiaryInfoButton>
-            }
-
         </div>
 
         @if (ShowTitle)
@@ -129,7 +106,17 @@
             }
         </div>
 
-        <div class="mb-5">
+        <div>
+            @if (ShowLocation)
+            {
+                <DiaryInfoButton Class="pl-2"
+                                 Icon="mdi-map-marker-outline"
+                                 Text="@diary.Location">
+                </DiaryInfoButton>
+            }
+        </div>
+
+        <div>
             <MChipGroup Column="true">
                 @foreach (var item in Tags)
                 {
@@ -147,6 +134,36 @@
 <div class="right-bottom-float-area">
     <BackTopButton Selector="@scrollContainerSelector">
     </BackTopButton>
+    @if (ShowWeather || ShowMood)
+    {
+        <Transition Name="slide-y-reverse-transition">
+            <ShowTransitionElement Value="showFab"
+                                   Tag="div"
+                                   Class="flex-column justify-center align-center"
+                                   Style="display:flex;">
+                @if (ShowWeather)
+                {
+                    <MyFloatButton Class="mt-2"
+                                   Elevation="1"
+                                   Icon="@WeatherIcon">
+                    </MyFloatButton>
+                }
+                @if (ShowMood)
+                {
+                    <MyFloatButton Class="mt-2"
+                                   Elevation="1"
+                                   Icon="@MoodIcon">
+                    </MyFloatButton>
+                }
+
+            </ShowTransitionElement>
+        </Transition>
+        <MyFloatButton Class="mt-2"
+                       Elevation="1"
+                       Icon="@(showFab ? "mdi-chevron-down" : "mdi-chevron-up")"
+                       OnClick="()=>showFab=!showFab">
+        </MyFloatButton>
+    }
 </div>
 
 <MultiListDialog @bind-Visible="showShare"
