--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
@@ -43,7 +43,7 @@
                             ItemSize="56"
                             Context="item">
                     <MListItem @key="item.Id"
-                               Class="px-0"
+                               Class="mb-1 rounded"
                                OnClick="()=>SetSelectedLocation(item)">
                         <MListItemContent>
                             @(item.Name)
