--- a/src/SwashbucklerDiary.Rcl/Components/FloatButton/BackTopButton.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/FloatButton/BackTopButton.razor
@@ -4,7 +4,7 @@
     <MyFloatButton @ref="myFloatButton"
                    Class="@InternalClass"
                    Show="_show"
-                   Icon="mdi-chevron-up"
+                   Icon="mdi-arrow-up"
                    OnClick="BackTop">
     </MyFloatButton>
 </FabTransition>
