--- a/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor.css
+++ b/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor.css
@@ -10,23 +10,23 @@
     flex-grow: 0;
 }
 
-.write-input-wrap{
-    display:flex;
-    flex-grow:1;
-    flex-direction:column;
-    min-height:0;
-    overflow:auto;
+.write-input-wrap {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    min-height: 0;
+    overflow: auto;
 }
 
 ::deep .write-markdown-wrap {
     display: flex;
     flex-grow: 1;
     flex-direction: column;
-    min-height:0;
+    min-height: 0;
 }
 
 ::deep .write-markdown {
-    flex-grow:1;
+    flex-grow: 1;
     min-height: 0;
     overflow: visible;
 }
@@ -40,4 +40,13 @@
 
 .write-chip-group ::deep .m-chip {
     margin: 4px 8px 4px 0;
+}
+
+.write-right-bottom-float-area {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    z-index: 1;
+    bottom: 1rem;
+    right: 0;
 }
