--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend.css
@@ -316,3 +316,7 @@
 .m-text-field--rounded > .m-input__control > .m-input__slot {
     padding: 0 12px
 }
+
+.m-btn--plain:not(.m-btn--active):not(.m-btn--loading):not(:focus):not(:hover) .m-btn__content {
+    opacity: unset;
+}
