🐛 fix(ReadPage): Some settings not updated when returning to this page

--- a/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
@@ -95,7 +95,9 @@
                 <MarkdownPreview @ref="markdownPreview"
                                  Value="@(diary.Content)"
                                  Class="@($"px-3 {highlightSearchContainerClass}")"
-                                 Style="padding-top:10px">
+                                 Style="padding-top:10px"
+                                 FirstLineIndent="firstLineIndent"
+                                 TaskListLineThrough="taskListLineThrough">
                 </MarkdownPreview>
             }
             else
