💄 style: update a little style

--- a/src/SwashbucklerDiary.Maui/Pages/Backups/WebDAVBackups/WebDAVBackupsPage.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Backups/WebDAVBackups/WebDAVBackupsPage.razor
@@ -150,13 +150,8 @@
                         ItemSize="56"
                         Context="item">
                 <MListItem @key="item"
-                           Class="px-0"
+                           Class="mb-1 rounded"
                            OnClick="()=>Download(item)">
-                    <MListItemIcon>
-                        <MIcon Class="evident-icon">
-                            mdi-file-outline
-                        </MIcon>
-                    </MListItemIcon>
                     <MListItemContent>
                         <MListItemTitle Class="webdav-list-item__title">
                             @item
