--- a/src/SwashbucklerDiary.Maui/Pages/Export/LANTransfer/LANSenderPage.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Export/LANTransfer/LANSenderPage.razor
@@ -26,6 +26,7 @@
                             ItemSize="56"
                             Context="item">
                     <MListItem @key="item.IPAddress"
+                               Class="mb-1 rounded"
                                OnClick="item.OnClick">
                         <MListItemIcon>
                             <MIcon Class="evident-icon">
