--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectChipDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectChipDialog.razor
@@ -5,8 +5,7 @@
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="420"
-                  Scrollable="true"
-                  Transition="">
+                  Scrollable="true">
     <MCard>
         <MCardTitle Class="font-weight-bold">
             @(Title)
