--- a/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
@@ -118,7 +118,7 @@
             }
         </div>
 
-        <div>
+        <div class="pl-2">
             <MChipGroup Column="true">
                 @foreach (var item in Tags)
                 {
