--- a/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor.css
+++ b/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor.css
@@ -50,3 +50,11 @@
     bottom: 1rem;
     right: 0;
 }
+
+@media screen and (min-width:600px) {
+    .write-right-bottom-float-area {
+        position: fixed;
+        right: 1rem;
+        margin: 8px !important;
+    }
+}
