--- a/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits MainLayoutBase
 
-@if (IsAndroidOrIOS)
+@if (isAndroidOrIOS)
 {
     <link href="css/status-bar-and-navigation-bar.css" rel="stylesheet" />
 }
