🐛 fix: Some errors popping up on the soft keyboard

--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
@@ -16,6 +16,10 @@
         padding: 0px 8px !important;
     }
 
+.vditor-content {
+    min-height: 0px;
+}
+
 .theme--dark .vditor-reset {
     color: #fff;
 }
