♻️ refactor(Waterfall): Move RecordScrollInfo from FileBrowsePage to MediaWaterfallBase

--- a/src/SwashbucklerDiary.Rcl/Components/Waterfall/ImageWaterfall.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/Waterfall/ImageWaterfall.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 @inherits MediaWaterfallBase
 
-<div>
+<div style="@($"{(contentLoading ? "opacity:0;":"")}")">
     <wc-waterfall @ref="elementReference" gap="@Gap" cols="@Cols">
         @foreach (var item in LoadedItems)
         {
