--- a/src/SwashbucklerDiary.Rcl/Pages/FileBrowsePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/FileBrowsePage.razor
@@ -27,25 +27,21 @@
     </MultiMenu>
 </MyAppBar>
 
-<SwiperTabItems @ref="swiperTabItems"
-                @bind-Value="tab">
+<SwiperTabItems @bind-Value="tab">
     <SwiperTabItem>
         <MContainer Class="my-container"
-                    Style="@($"{(contentLoading ? "opacity:0;":"")}")"
                     Fluid="true">
             <ImageWaterfall Value="imageResources"></ImageWaterfall>
         </MContainer>
     </SwiperTabItem>
     <SwiperTabItem>
         <MContainer Class="my-container"
-                    Style="@($"{(contentLoading ? "opacity:0;":"")}")"
                     Fluid="true">
             <AudioCardList Value="audioResources"></AudioCardList>
         </MContainer>
     </SwiperTabItem>
     <SwiperTabItem>
         <MContainer Class="my-container"
-                    Style="@($"{(contentLoading ? "opacity:0;":"")}")"
                     Fluid="true">
             <VideoWaterfall Value="videoResources"></VideoWaterfall>
         </MContainer>
