--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/PrivacyPolicyPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/PrivacyPolicyPage.razor
@@ -7,5 +7,7 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MarkdownPreview Value="@content"></MarkdownPreview>
+    <MarkdownPreview Value="@content"
+                     Class="user-select">
+    </MarkdownPreview>
 </ScrollContainer>
