--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/SponsorPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/SponsorPage.razor
@@ -28,7 +28,9 @@
                     @(I18n.T("Sponsor.Introduce.Title"))
                 </MCardTitle>
                 <MCardText Style="text-indent: 2em;">
-                    <MMarkdownIt Source="@(I18n.T("Sponsor.Introduce.Content"))"></MMarkdownIt>
+                    <MMarkdownIt Source="@(I18n.T("Sponsor.Introduce.Content"))"
+                                 Class="user-select">
+                    </MMarkdownIt>
                 </MCardText>
             </MCard>
 
